# nerfstudio

./: run commands.txt
nerfstudio/models/: nerfacto.py
nerfstudio/my_method/: custom_dataparser.py  my_config.py  pyproject.toml
nerfstudio/nerfstudio-template/: pyproject.toml
nerfstudio/nerfstudio-template/nerfstudio_template/: my_config.py  my_datamanager.py  my_pipeline.py
sparse/0/: project.ini
